mdmCeneveo/src/objects/JOBZ_Export__c.object
<CustomObject>
    <fields>
        <fullName>AccessibleRecord__c</fullName>
        <label>AccessibleRecord</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JOBZ Exports</relationshipLabel>
        <relationshipName>JOBZ_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Art_in_plant_10am__c</fullName>
        <label>Art in plant : 10am</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Delivery_Date__c</fullName>
        <label>Balance Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <label>Billing Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>JOBZ Exports</relationshipLabel>
        <relationshipName>JOBZ_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>JOBZ Exports (Contact)</relationshipLabel>
        <relationshipName>JOBZ_Exports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Samples__c</fullName>
        <label>Customer Samples</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_1st_proofs_to_press__c</fullName>
        <label>Days 1st proofs to press</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_art_to_press__c</fullName>
        <label>Days art to press</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_press_to_balance_delivery__c</fullName>
        <label>Days press to balance delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_press_to_first_drop__c</fullName>
        <label>Days press to first drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_press_to_partial__c</fullName>
        <label>Days press to partial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_press_to_ship__c</fullName>
        <label>Days press to ship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_Number__c</fullName>
        <label>Estimate Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimate Request</label>
        <referenceTo>Estimate_Request__c</referenceTo>
        <relationshipLabel>JOBZ Exports</relationshipLabel>
        <relationshipName>JOBZ_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimate_Type__c</fullName>
        <label>Estimate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer - New Item</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer - Existing Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - New Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimator_Name__c</fullName>
        <label>Estimator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JOBZ_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimator_email__c</fullName>
        <label>Estimator email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Film_prep__c</fullName>
        <label>Film prep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Mail_Drop__c</fullName>
        <label>First Mail Drop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IN_Item_Part__c</fullName>
        <label>IN Item Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Revision__c</fullName>
        <label>If Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <label>Invoice Month</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_date__c</fullName>
        <label>Invoice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobTeam__c</fullName>
        <label>JobTeam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>JobTitle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job_Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_lbl__c</fullName>
        <label>PN lbl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Qty_Estimate__c</fullName>
        <label>Partial Qty Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partial_Ship__c</fullName>
        <label>Partial Ship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planner_s_email__c</fullName>
        <label>Planner&apos;s email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Press_Date__c</fullName>
        <label>Press Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Numbers__c</fullName>
        <label>Previous Job Numbers</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Jobs__c</fullName>
        <label>Previous Jobs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Planner__c</fullName>
        <label>Print Planner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printing_Company_Name__c</fullName>
        <label>Printing Company Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Notes__c</fullName>
        <label>Proposal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Qty_1__c</fullName>
        <label>Qty 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_2__c</fullName>
        <label>Qty 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_3__c</fullName>
        <label>Qty 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Allowance__c</fullName>
        <label>Qty. Allowance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Time__c</fullName>
        <label>Quote Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_Date__c</fullName>
        <label>REF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepKey__c</fullName>
        <label>SalesRepKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JOBZ_Exports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipMonthManual__c</fullName>
        <label>ShipMonthManual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Month__c</fullName>
        <label>Ship Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SigFlag__c</fullName>
        <label>SigFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St louis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spec_Label1__c</fullName>
        <label>Spec Label1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stripped_proofs_at_customer__c</fullName>
        <label>Stripped proofs at customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Turnarouns_Interval__c</fullName>
        <label>Turnarouns Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Pages__c</fullName>
        <label># of Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schLbl24__c</fullName>
        <label>schLbl24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schLbl27__c</fullName>
        <label>schLbl27</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schLbl28__c</fullName>
        <label>schLbl28</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>JOBZ Export</label>
    <nameField>
        <label>Estimate Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JOBZ Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>